# hexlet-flask-example

./: __init__.py  app.py  build.sh  data.json  data.py  example.py  flask_repository.py  init.sql  logfile  makefile  pyproject.toml  repository.py  validator.py
templates/: index.html
templates/courses/: cart.html  edit.html  form.html  index.html  moderate.html  new.html  products.html  show.html  view.html
templates/help/: help.html
templates/layouts/: layout.html
templates/users/: delete.html  edit.html  index.html  layout.html  new.html  show.html
tests/: test_app.py
