[project]
name = "yyy"
version = "0.1.0"
description = ""
authors = [
    {name = "NoFate35",email = "vsokol35@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
version = "1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
