[tool.poetry]
name = "hexlet-flask-example"
version = "0.1.0"
description = ""
authors = ["NoFate35 <vsokol35@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.10"
flask = "^3.1.0"
psycopg = "^3.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
